--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = "http://chickenauto.com/"
 languageCode = "en-us"
-title = "My New Hugo Site"
-theme = "prologue"
+title = "ChickenAuto - Free Auto TLBB / Dragon Oath"
+theme = "hugo-theme-pure"
