--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "themes/hugo-theme-pure"]
 	path = themes/hugo-theme-pure
 	url = https://github.com/xiaoheiAh/hugo-theme-pure.git
+[submodule "public"]
+	path = public
+	url = https://github.com/HadesD/ChickenAuto.git
+	branch = gh-pages
