--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "http://chickenauto.com/"
+baseURL: "/"
 languageCode: "en-us"
 title: "ChickenAuto - Free Auto TLBB / Dragon Oath"
 theme: "hugo-theme-pure"
